force-app/main/default/objects/ConditionRule__c/ConditionRule__c.object-meta.xml
<CustomObject>
    <label>ConditionRule</label>
    <nameField>
        <displayFormat>CR-{0000000}</displayFormat>
        <label>ConditionRules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ConditionRules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>