force-app/main/default/objects/ConditionRule__c/fields/AssignedCount__c.field-meta.xml
<CustomField>
    <fullName>AssignedCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AssignedCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>