force-app/main/default/objects/ConditionRule__c/fields/AssignTo__c.field-meta.xml
<CustomField>
    <fullName>AssignTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssignTo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ConditionRules</relationshipName>
    <type>Lookup</type>
</CustomField>