force-app/main/default/objects/ConditionRule__c/fields/Field_0__c.field-meta.xml
<CustomField>
    <fullName>Field_0__c</fullName>
    <label>Field 0</label>
    <length>255</length>
    <type>Text</type>
</CustomField>