force-app/main/default/objects/ConditionRule__c/fields/Option_0__c.field-meta.xml
<CustomField>
    <fullName>Option_0__c</fullName>
    <label>Option 0</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CompareOption</valueSetName>
    </valueSet>
</CustomField>