force-app/main/default/objects/ConditionRule__c/fields/Option_1__c.field-meta.xml
<CustomField>
    <fullName>Option_1__c</fullName>
    <label>Option 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CompareOption</valueSetName>
    </valueSet>
</CustomField>