force-app/main/default/objects/ConditionRule__c/fields/Value_0__c.field-meta.xml
<CustomField>
    <fullName>Value_0__c</fullName>
    <label>Value 0</label>
    <length>255</length>
    <type>Text</type>
</CustomField>